--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
+    "noImplicitAny": false,
+    "suppressImplicitAnyIndexErrors": true,
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
