Security & Deployment Improvements
- Add environment variable validation (lib/env.ts)
- Remove hardcoded secrets from scripts
- Update all API routes to use env module instead of process.env
- Add password change endpoint (/api/auth/change-password)
- Add dependency guards for structure deletes (prevents orphan records)
- Add dry-run support for structure deletes
- Update .gitignore to exclude all secrets and env files
- Add .env.example template
- Add SECURITY.md with security guidelines
- Make build deterministic for Render (yarn only, Node 20, frozen-lockfile)
- Add .nvmrc for Node version
- Add DEPLOY_RENDER.md deployment guide
- Remove conflicting package-lock.json (use yarn only)

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
+.env.*.local
 .env
+*.pem
+*.key
+credentials*.json
+client_secret*.json
 
 # vercel
 .vercel
