--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "codemod:improved": "tsx scripts/codemod-improved.ts",
         "codemod:v2": "tsx scripts/codemod-improved-v2.ts",
         "seed:test": "dotenv -e .env.local -- tsx scripts/seed-test-data.ts",
+        "seed:er-demo": "dotenv -e .env.local -- tsx scripts/seed/seed_er_demo.ts",
         "bootstrap:owner": "dotenv -e .env.local -- tsx scripts/bootstrapOwner.ts",
         "migrate:assign-users": "tsx scripts/migrations/005_assign_users_to_tenants.ts",
+        "migrate:er-init": "tsx scripts/migrations/020_er_init.ts",
         "migrate:tenant1": "dotenv -e .env.local -- tsx scripts/migrations/010_migrate_all_data_to_tenant1.ts",
         "migrate:tenant-indexes": "dotenv -e .env.local -- tsx scripts/migrations/011_add_tenant_indexes.ts",
         "migrate:transfer-tenants": "dotenv -e .env.local -- tsx scripts/migrations/012_transfer_data_between_tenants.ts",
@@ -113,6 +115,8 @@
         "@types/react": "19.2.7",
         "autoprefixer": "^10.4.19",
         "dotenv-cli": "^11.0.0",
+        "eslint": "^8",
+        "eslint-config-next": "16.1.3",
         "glob": "^13.0.0",
         "globals": "^16.2.0",
         "postcss": "^8",
